# writars

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
mocks/: extensive.ron  minimal.ron
src/: lib.rs  main.rs
src/cli/: checks.rs  io.rs  mod.rs  serde.rs
src/cli/specimen/: extensive.ron
src/format/: checks.rs  mod.rs
